[gd_scene load_steps=3 format=3 uid="uid://ckwx36ydstxxk"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_l0c2e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hws4g"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_l0c2e")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0.0117647, 0.0117647, 1)

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
scale = Vector2(37.9672, 37.9672)
shape = SubResource("CircleShape2D_hws4g")

[node name="patrol_interval" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="patrol_interval" to="." method="_on_patrol_interval_timeout"]
